--- a/easybank-landing-page/styles.css
+++ b/easybank-landing-page/styles.css
@@ -17,7 +17,7 @@ body{
   font-size: 18px;
 }
 img{
-  width: 100%;
+  max-width: 100%;
 }
 .mobile-navigation{
   position: fixed;
@@ -110,14 +110,19 @@ margin:1.55em 0;
 
 }
 
-.article__container h2{
+.articles h2{
   text-align: center;
 }
 
 .article__card{
-  border-radius: 24px;
+  border-radius: 10px;
   background-color: var(--White);
   margin-bottom: 2em;
+}
+
+.article__card img{
+  border-top-left-radius: 10px;
+  border-top-right-radius:10px;
 }
 
 .author{
@@ -139,9 +144,18 @@ margin:1.55em 0;
   padding:0 1.5em;
   padding-bottom: 3em;
 }
-.footer__container{
+.footer__section{
   background-color: var(--DarkBlue);
+  padding: 2em 0;
 }
+
+.footer__container{
+  width: 80%;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+
 
 .social-handles__container{
   margin:2em 0;
@@ -168,7 +182,7 @@ margin:1.55em 0;
 }
 
 .footer__item{
-  margin-bottom: .75em;
+  margin-bottom: .95em;
 
 }
 
@@ -178,6 +192,20 @@ margin:1.55em 0;
   color: var(--VeryLightGray);
 }
 
+.footer__logo{
+  margin-bottom:2em;
+  display: flex;
+  justify-content: center;
+}
+
+.social-handles{
+  margin-bottom: 2em;
+  padding:0 2em;
+}
+
+.rights__container{
+  text-align: center;
+}
 .btn__container{
   display: flex;
   justify-content: center;
@@ -195,7 +223,7 @@ margin:1.55em 0;
 
 .rights{
   text-align: center;
-  color: var(--LightGrayishBlue);
+  color: var(--GrayishBlue);
   font-weight: 300;
   margin-bottom: 1em;
 }
@@ -203,16 +231,19 @@ margin:1.55em 0;
 .attribution{
   color: var(--LimeGreen);
   padding-bottom: 1em;
+  text-align: center;
+  font-size: 12px;
+
 }
 
 .attribution a{
   text-decoration: none;
-  color: var(--VeryLightGray);
+  color: var(--White);
 }
 
 
 
-@media (min-width:1200px) {
+@media (min-width:800px) {
   .overall__container{
     margin:0 auto;
     width: 80%;
@@ -224,15 +255,36 @@ margin:1.55em 0;
     width: 65%;
   }
 
-  .qualities{
+  .qualities,.article__container{
     display: flex;
     text-align: left;
     padding-bottom: 3em;
   }
-  .quality__container + .quality__container{
+  .quality__container + .quality__container,.article__card+.article__card{
     margin-left: 1em;
   }
   .quality__container{
     width: 40%;
   }
+
+  .footer__row{
+  display: flex;
+  gap:6em;
+  }
+
+  .footer__list{
+    text-align: left;
+
+  }
+
+  .social-handles{
+    margin-top: 3em;
+  }
+
+  .rights__container{
+    margin-left:auto;
+    text-align: right;
+  }
+
+  
 }
